changes for Me-Sida

--- a/content/.meta.md
+++ b/content/.meta.md
@@ -4,13 +4,13 @@ views:
         region: breadcrumb
         template: default/breadcrumb
         data:
-            meta: 
+            meta:
                 type: breadcrumb
 
     flash:
         region: flash
         template: default/image
         data:
-            src: "img/dbwebbisar.jpg"
+            src: "img/flashimg.jpg"
 
 ...
