--- a/content/report/.meta.md
+++ b/content/report/.meta.md
@@ -4,14 +4,14 @@ views:
         region: breadcrumb
         template: default/breadcrumb
         data:
-            meta: 
+            meta:
                 type: breadcrumb
 
     flash:
         region: flash
         template: default/image
         data:
-            src: "img/dbwebbisar.jpg"
+            src: "img/flashimg.jpg"
 
     next-previous-above:
         region: main
@@ -19,7 +19,7 @@ views:
         sort: 1
         data:
             nextPreviousTitle: false
-            meta: 
+            meta:
                 type: next-previous
 
     main:
@@ -34,7 +34,7 @@ views:
         sort: 3
         data:
             nextPreviousTitle: true
-            meta: 
+            meta:
                 type: copy
                 view: next-previous-above
 
@@ -43,7 +43,7 @@ views:
         template: default/toc
         data:
             title: Reports
-            meta: 
+            meta:
                 type: book-toc
 
 ...
