--- a/content/report/110_kmom01.md
+++ b/content/report/110_kmom01.md
@@ -1,4 +1,38 @@
 Kmom01
 ===============================
 
-Report for kmom01.
+
+* Är du sedan tidigare van att jobba i ramverk för att bygga webbplatser?
+Om ja, vilka ramverk/språk har du jobbat med?
+* Det blev en del nya verktyg i labbmiljön, var de nya för dig eller kände du igen dem?
+* Hur kändes det att jobba med Anax Flat och bygga din me-sida?
+* Har du några förutfattade meningar, eller kanske en etablerad övertygelse,
+inom design och användbarthet för webben?
+* Det fanns videor som kompletterade artiklarna, hjälpte de dig att förstå materialet bättre?
+
+
+Jag har gått kursen PHPMVC så jag är bekant med ramverk och jobba med dem sedan tidigare
+vi jobbade i php i anax ramverket vilket jag tyckte var en väldigt rolig men utmanande kurs.
+
+Jag är van vid de flesta av verktygen sedan innan, har jobbat en del med Git/GitHub i andra
+kurser och dels i olika projekt för versions hantering. Det som blev lite nytt var make, men
+jag tyckte inte det var direkt någon kulle att ta sig över. Det gick väldigt smidigt för mig.
+
+Det kändes väldigt bra att jobba med det och man kom snabbt in i ramverket och det var
+hyfsat lätt att förstå och sätta sig in i det direkt. Det kan va för att jag har jobbat med
+ramverk sedan tidigare men jag tror de flesta har rätt lätt att komma igång med detta ramverk.
+Det gick väldigt smärtfritt att skapa me-sidan eftersom man hade mycket färdigt sen övningen
+i kursmomentet. Så det var mest nu i början man ändrade lite småsaker och la till saker för
+att personifiera sidan.
+
+Jag tycker att designt är ett väldigt viktigt moment i webbutveckling. Det är ju front-end/design
+som får back-end att komma till liv. Design är ju det som lockar användaren till att stanna och
+integrera med hemsidan. Personligen tycker jag väldigt mycket om front-end/design och hoppas
+att få en framtid inom det ut i it-världen. Design behövs lika mycket som alla funktioner
+behövs.
+
+Just i detta kursmoment kollade jag inte på videos. Men jag är övertygad över att jag kommer göra
+det i kommande kursmoment.
+
+Övrigt: Jag tycker att det var ett väldigt bra kursmoment och att man fick en bra blick in i ramverket
+och lärde sig hur det fungerade. Det var en mild men behövande start för den här kursen.
