Added content grid sites

--- a/content/report/120_kmom02.md
+++ b/content/report/120_kmom02.md
@@ -1,4 +1,25 @@
 Kmom02
 ===============================
 
-Report for kmom02.
+
+* Vad tycker du om LESS så här långt, och det sättet vi jobbar med LESS-moduler i vårt tema?
+* Hur kändes det att kompilera LESS till CSS, var det något du reflekterade över?
+* Har du varit bekant med Makefiler och make sedan tidigare, eller något liknande byggverktyg? Vad tycker du om make så här långt?
+* Fann du nytta i de videor som var kopplade till detta kursmoment?
+
+Så här långt i kursen tycker jag om LESS och sättet vi jobbar med LESS-moduler. Det gick
+väldigt smidigt att komma igång med det och jag tycker att övningen förklarade bra.
+
+Jag reflekterade egentligen inte så mycket utan, jag följde övningen och allt gick väldigt
+smidigt och enkelt. Men det är kanske något man borde reflekterat över och kollat lite nogare på.
+Men jag är väldigt nöjd över att det gick så himla smidigt och snabbt.
+
+Jag inte jobbat med Makefiler innan vad jag kan komma på eller något liknande. Änsålänge så
+gillar jag att jobba med make och ser det smidiga i det, att installera moduler och att hålla
+allt uppdaterat för senaste versioner.
+
+Jag har inte kollat på videos i detta kursmomentet. Jag följde bara övningen och improviserad
+lite.
+
+Överlag är jag väldigt nöjd med detta kursmomentet och jag tyckte att övningen och uppgiften var
+smidig och enkel att följa samt att den var väldigt nyttig.
