--- a/content/report/130_kmom03.md
+++ b/content/report/130_kmom03.md
@@ -2,3 +2,30 @@ Kmom03
 ===============================
 
 Report for kmom03.
+
+*    Hur känns det att vara styrd till ett vertikalt grid, hämmande eller stödjande?
+*    Hur känns det att jobba med ett typografiskt horisontellt/baseline grid, ser du någon poäng med det?
+*    Har du jobbat med liknande layouttekniker sedan tidigare?
+*    Du börjar se hur man kan jobba med LESS, kommentarer på det?
+*    Hur uppfattade du nivån på detta kmom? Svårt, lagom, många nya begrepp?
+
+Att var styrd till vertikalt grid känns väldigt bra och stödjande. De hjälper en enormt mycket
+med att placera ut element och kunna hantera dem. Det är även bra att när man jobbar med ett sånt
+här grid och man placerar ut alla element, allt följs med i det responsiva delen också. Men som allt
+så kunde det vara lite kämpigt i början men det satte sig rätt snabbt och man började gilla att arbeta
+med det.
+
+Det kändes bra att jobba med även fast jag hade lite problem med att få gridet till att visas... helt klart
+ser jag en poäng i det, att det kan vara bra för att få en snygg stil med placering av allting, såsom text,
+footer etc..
+
+Det enda jag har jobbat med innan är bootstrap där man också kan placera ut med kolumner och få
+det responsivt på köpet.
+
+Att jobba med less är helt fantastiskt och smidigt. Det underlättar en hel del och spar en mycket tid.
+Visst, man måste ju skriva allt först, men i slutändan när man behöver göra justeringar i designen
+behöver man inte ändra överallt, utan man ändrar det variabler som behövs och voila = allt annat är fixat.
+
+För min del så tyckte jag det var lite svårt, jag la ner väldigt många timmar på det för att verkligen
+kunna förstå det och kunna lösa uppgiften. Jag har kolla på det videos som kom med ett x antal gånger för kunna sätta mig in i det och jobba jämnsides. Dock när allting satte så var det ett otroligt roligt
+och givande kmom som man kommer ta med sig i framtiden.
