added diffrent themes

--- a/content/report/140_kmom04.md
+++ b/content/report/140_kmom04.md
@@ -1,4 +1,20 @@
 Kmom04
 ===============================
 
-Report for kmom04.
+
+*    Hur känner du inför färger och webbplatser? Föredrar du något särskilt ljust, mörkt, färgglatt?
+*    Har du funderat på hur webbplatsers färgskala och färgsättning påverkar besökarens känsla av webbplatsen? Bidrar val av typsnitt till den känslan?
+*    Hur känns din LESS-struktur så här långt?
+*    Hur valde du att göra med ditt eget default tema?
+*    Var det något särskilt som du uppfattade som utmanande i detta kmom?
+
+
+Jag känner mig rätt lugn inför att färger och hur de ska användas, jag känner att jag har rätt bra koll på det, vad som fungerar bra ihop och vad som inte. Personligen gillar jag rätt så mörka sidor med små detaljer av någon ljus färg.
+
+Det jag verkligen funderat på. Det är klart att med sin design att man vill fånga in användaren på nått sätt och få den att stanna. Man vill förmedla säkerhet och trygghet och bygga förtroende med varandra. Jag tycker att man ska hålla sig til 2-4 färger för att hålla det enkelet och kunna göra hemsidan luftig som ger trygghet till användaren. Blandar man för mycket färger så blir det bara förvirrande användare och kommer att klicka bort.
+
+Min less struktur känns helt ok men det är ju klart, allt går att förbättras och organiseras bättre på något sätt.
+
+Mitt egna default tema ville jag hålla enkelt och använda mig av färger som jag själv personligen gillar, och det är som jag skrev innan, mörka färger med någon ljus detalj (Har inte kommit ännu).
+
+Detta kursmoment uppfattade jag inte som direkt utmanande, jag tycker att allt flöt på bra för mig. Jag tycker att det var ett väldigt bra och givande kursmoment, som fick en att sätta sig ner i olika slags teman med olika färger och lära sig hur färger kan påverka en användare på ett speciellt sätt och att alla färger påverkar olika personer annorlunda.
