--- a/content/report/120_kmom02.md
+++ b/content/report/120_kmom02.md
@@ -7,8 +7,10 @@ Kmom02
 * Har du varit bekant med Makefiler och make sedan tidigare, eller något liknande byggverktyg? Vad tycker du om make så här långt?
 * Fann du nytta i de videor som var kopplade till detta kursmoment?
 
-Så här långt i kursen tycker jag om LESS och sättet vi jobbar med LESS-moduler. Det gick
-väldigt smidigt att komma igång med det och jag tycker att övningen förklarade bra.
+Så här långt är jag väldigt nöjd med hur vi jobbar med LESS-moduler i vårat tema. Jag tycker
+att övningarna hjälper en väldigt bra och förklarar bra hur allt fungerar och hur man ska
+gå till väga. Det var väldigt spännande att jobba med detta kursmomentet och komma igång ännu
+mer med LESS-moduler och det ska bli ännu mer spännande att se vad som kommer i kommande kursmoment.
 
 Jag reflekterade egentligen inte så mycket utan, jag följde övningen och allt gick väldigt
 smidigt och enkelt. Men det är kanske något man borde reflekterat över och kollat lite nogare på.
@@ -21,5 +23,8 @@ allt uppdaterat för senaste versioner.
 Jag har inte kollat på videos i detta kursmomentet. Jag följde bara övningen och improviserad
 lite.
 
-Överlag är jag väldigt nöjd med detta kursmomentet och jag tyckte att övningen och uppgiften var
-smidig och enkel att följa samt att den var väldigt nyttig.
+Överlag är jag väldigt nöjd med detta kursmomentet och jag tycket att övningen och uppgiften var
+väldigt bra och nyttig och gav god kunskap i att kompilera LESS till CSS och jobba med LESS-
+Moduler. Det var även väldigt spännande att komma igång med makefiler och känna på dem hur dem
+kan vara nyttiga för oss. Det var väldigt spännande att se hur kraftigt ett byggverktyg kan
+vara och hur mycket det kan underlätta för en.
