fixes for hgrid and analysis

--- a/content/report/150_kmom05.md
+++ b/content/report/150_kmom05.md
@@ -2,3 +2,17 @@ Kmom05
 ===============================
 
 Report for kmom05.
+
+
+*    Berätta kort om erfarenheterna med din undersökning av webbplatsers laddningstid.
+*    Har du några funderingar kring Cimage och dess nytta och features?
+*    Lyckades du uppnå ett bra sätt och en LESS-struktur för att jobba med dina bilder i webbplatsen?
+*    Om du gjorde extrauppgiften med picture, srcset och sizes, fick du någon känsla för för- och   nackdelar med konceptet?
+
+Jag har direkt inte några erfarenheter med undersökning av webbplatsers laddningstid. Det närmsta jag kommer till erfarenheter av laddningstider är att jag har i andra dbwebbkurser där vi har skapat hemsidor att jag har kollat med google hur bra min hemsida fungerar.
+
+Jag vet inte dirket om jag hade några funderingar över det utan jag var mest spänd och intresserad på att komma igång med att jobba med det och se hur allt fungerar och hänger ihop. Efteråt så ser jag verkligen nyttan med det och smidigheten framförallt. Man märkte det tydligt med bloggen.
+
+Jag tycker att jag har uppnått med att jobba med bilder i min webbläsare. Det fungerar som det ska och så som jag vill att det ska fungera så jag är nöjd.
+
+Gjorde inte extrauppgiften i detta kursmoment.
