--- a/content/report/160_kmom06.md
+++ b/content/report/160_kmom06.md
@@ -2,3 +2,18 @@ Kmom06
 ===============================
 
 Report for kmom06.
+
+
+*    Hur känns det att tänka i termer av designelement och designprinciper?
+*    Har du en klar uppfattning om hur designelement och designprinciper samverkar för att skapa en design?
+*    Har du en uppfattning om “the final touch” och vad det kan vara i sammanhanget webbdesign?
+*    Har du under kursen skapat dig en känsla för begreppen god design, vad det innebär och vad som är subjektiv och objektivt inom området?
+
+
+Det känns väldigt bra och det ger en ett nytt perspektiv att tänka på när man ska designa hemsidor i framtiden. Men jag har väll nog alltid egentligen tänkt på vissa element eller principer men ändå inte, så i detta kursmoment har man ju absolut fått större kunskap och förståelse för allt.
+
+Efter att jag har jobbat med detta kursmoment så känner jag att jag har fått en klar bild och uppfattning om hur designelement och designprinciper samverkar för att skapa en design. Man kommer ju abosult tänka på dessa olika delar i framtiden när man ska skapa en design för att få allt att samverka som sagt.
+
+Absolut har jag det, för mig blir det mer av finliret av design för att få det perfekta resultate och att verkligen få allt att samverka.
+
+Det har jag absolut tycker jag och det är något man kommer ta med sig överallt egentligen. Man kommer analysera de flesta hemsidor man besöker troligen om man verkligen tycker att det är en god design eller inte och vad som kanske hade kunnat förbättras. Det är något jag tycker är väldigt intressant och roligt och ger en lite mer motivation till att skapa något bättre.
