added blogg posts

--- a/content/report/150_kmom05.md
+++ b/content/report/150_kmom05.md
@@ -13,6 +13,8 @@ Jag har direkt inte några erfarenheter med undersökning av webbplatsers laddni
 
 Jag vet inte dirket om jag hade några funderingar över det utan jag var mest spänd och intresserad på att komma igång med att jobba med det och se hur allt fungerar och hänger ihop. Efteråt så ser jag verkligen nyttan med det och smidigheten framförallt. Man märkte det tydligt med bloggen.
 
-Jag tycker att jag har uppnått med att jobba med bilder i min webbläsare. Det fungerar som det ska och så som jag vill att det ska fungera så jag är nöjd.
+Jag tycker absolut att jag har uppnått ett bra sätt och en bra LESS struktur för att jobba med bilder på min webbplats och jag är väldigt nöjd. Jag tyckte det var väldigt intressant att jobba med det och få det till att funka samtidigt som man jobbade med övningen. Jag tyckte att denna delen gav väldigt mycket.
 
-Gjorde inte extrauppgiften i detta kursmoment.
+Jag har inte gjort extrauppgiften i det här kursmomentet då tiden inte räckte til och fick lägga tiden på annat. Men det verkade som rätt så intressant extrauppgift och kommer nog att komma tillbaks till det och kanske göra den på fritid får att lite mer i min verktygslåda.
+
+Jag tycker att detta kursmomentet gav väldigt mycket som man har nytta av att använda sig av i framtiden. Det var spännande att få allt till att fungera och lära sig hur man kan jobba med det på ett annat sätt som detta. Det var ett väldigt nyttigt kursmoment som tog ett tag för mig att göra klart på grund av lite komplikationer och lite för lång tänkande men det är något jag tycker om och lär mig mest ifrån.
